--- a/min.css
+++ b/min.css
@@ -1,13 +1,34 @@
 h1 {
-    text-align:center;
+    text-align: center;
 }
 
-body{
+h6 {
+    text-align: center;
+}
+
+body {
+    margin: 5% auto;
+    background: #f2f2f2;
     color: #444444;
-    background-color: #EEEEEE;
-    margin: 40px auto;
-    max-width: 650px;
-    line-height: 1.6em;
-    font-size: 18px;
-    padding: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+        Helvetica, Arial, sans-serif;
+    font-size: 16px;
+    line-height: 1.8;
+    text-shadow: 0 1px 0 #ffffff;
+    max-width: 73%;
+    /* padding: 0; */
+}
+
+code {
+    background: white;
+}
+
+a {
+    border-bottom: 1px solid #444444;
+    color: #444444;
+    text-decoration: none;
+}
+
+a:hover {
+    border-bottom: 0;
 }
